--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "atomic-state": "^2.2.6",
-    "http-react": "^2.5.2"
+    "http-react": "^2.5.2",
+    "react-kuh": "^0.0.4"
   }
 }
