--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./",
     "module": "CommonJS",
     "target": "es5",
     "lib": ["es6", "dom", "es2019"],
@@ -17,15 +17,6 @@
     "declaration": true
   },
   "include": ["src"],
-  "exclude": [
-    "node_modules",
-    "build",
-    "shared",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "src/setupTests.ts"
-  ],
+  "exclude": ["node_modules"],
   "types": ["typePatches"]
 }
