--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atomic-utils",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "atomic-state, http-react and react-kuh",
   "main": "dist/index.js",
   "keywords": [],
@@ -8,7 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "atomic-state": "^2.9.94",
+    "clsx": "^2.1.1",
     "http-react": "^3.6.7",
-    "react-kuh": "^0.1.2"
+    "react-kuh": "^0.1.2",
+    "tailwind-merge": "^2.5.2"
   }
 }
